<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Faas Contacts App</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter the message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="first_name">Enter First Name</string>
    <string name="last_name">Enter Last Name</string>
    <string name="phone">Enter Phone</string>
    <string name="email">Enter Email Address</string>
    <string name="title_activity_faas_search">FaasSearchActivity</string>
    <string name="search_lastname">Search Last Name</string>
    <string name="button_search">Search</string>

</resources>
