<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/first_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:inputType="textPersonName" />

 	<EditText
 	    android:id="@+id/last_name"
 	    android:layout_width="300dp"
 	    android:layout_height="wrap_content"
 	    android:hint="@string/last_name"
 	    android:inputType="textPersonName" />

     <EditText
         android:id="@+id/phone"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:hint="@string/phone"
         android:inputType="phone" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />
        
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="sendMessage"
    />
</LinearLayout>
